--- a/AsteroidDefens/web/index.html
+++ b/AsteroidDefens/web/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | AsteroidDefens</title>
+    <title>AsteroidDefens</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1066 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -17,18 +17,13 @@
         </div>
       </div>
       <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">AsteroidDefens</div>
-      </div>
+      
     </div>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -58,9 +53,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/7e71cebbeb144ab25fde5a214cd86ea4.data.unityweb",
-        frameworkUrl: buildUrl + "/c66a45558fcb36eb907a015dad271f1b.js.unityweb",
-        codeUrl: buildUrl + "/0a7d7d071c45c221d5d25605004fa5fa.wasm.unityweb",
+        dataUrl: buildUrl + "/5002ebb9e18baf9e68cc2b7e2a9e9349.data.unityweb",
+        frameworkUrl: buildUrl + "/102ae5df7e7102ff29b0b91fed3f1bce.js.unityweb",
+        codeUrl: buildUrl + "/b45ab1f3473a4ee8c64fe98d2b2c505f.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "AsteroidDefens",
@@ -95,7 +90,7 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
+        canvas.style.width = "1066px";
         canvas.style.height = "600px";
       }
 
@@ -108,9 +103,6 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
         }).catch((message) => {
           alert(message);
         });
