--- a/AsteroidDefens/web/index.html
+++ b/AsteroidDefens/web/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>AsteroidDefens</title>
+    <title>Asteroid Shield Tile-Matching Space Defense</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -23,7 +23,6 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -53,12 +52,12 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/471955804a60a793718df87deb8805d6.data.unityweb",
-        frameworkUrl: buildUrl + "/4e6d062ea86f9b9098f266e30792fba0.js.unityweb",
-        codeUrl: buildUrl + "/cc9235bf0b3cfa8c14e0eb6428c91aa3.wasm.unityweb",
+        dataUrl: buildUrl + "/5e88cd85fc199b71b657f531b7f7522a.data.unityweb",
+        frameworkUrl: buildUrl + "/b4efbe7fa7b8468adb198493005fbc38.js.unityweb",
+        codeUrl: buildUrl + "/1f3eb43e491b30b0eec2842156790a37.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "AsteroidDefens",
+        companyName: "GamesdMurdock",
+        productName: "Asteroid Shield Tile-Matching Space Defense",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
