--- a/AsteroidDefens/Assets/WebGLTemplates/2020+2021-WithButtonFullScreen/index.html
+++ b/AsteroidDefens/Assets/WebGLTemplates/2020+2021-WithButtonFullScreen/index.html
@@ -13,7 +13,20 @@
 
 <style>	
       @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500&display=swap');	
-      @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500&family=MuseoModerno:wght@600&display=swap');	
+      @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500&family=MuseoModerno:wght@600&display=swap');
+
+    div#gameContainer canvas[data-pixel-art="true"] {
+        position: absolute;
+        image-rendering: optimizeSpeed;
+        image-rendering: -webkit-crisp-edges;
+        image-rendering: -moz-crisp-edges;
+        image-rendering: -o-crisp-edges;
+        image-rendering: crisp-edges;
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: optimize-contrast;
+        image-rendering: pixelated;
+        -ms-interpolation-mode: nearest-neighbor;
+    }
     </style>
 
   </head>
