--- a/AsteroidDefens/web/index.html
+++ b/AsteroidDefens/web/index.html
@@ -13,7 +13,20 @@
 
 <style>	
       @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500&display=swap');	
-      @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500&family=MuseoModerno:wght@600&display=swap');	
+      @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@200;500&family=MuseoModerno:wght@600&display=swap');
+
+    div#gameContainer canvas[data-pixel-art="true"] {
+        position: absolute;
+        image-rendering: optimizeSpeed;
+        image-rendering: -webkit-crisp-edges;
+        image-rendering: -moz-crisp-edges;
+        image-rendering: -o-crisp-edges;
+        image-rendering: crisp-edges;
+        image-rendering: -webkit-optimize-contrast;
+        image-rendering: optimize-contrast;
+        image-rendering: pixelated;
+        -ms-interpolation-mode: nearest-neighbor;
+    }
     </style>
 
   </head>
@@ -44,9 +57,9 @@
       const buildUrl = "Build";
       const loaderUrl = buildUrl + "/web.loader.js";
       const config = {
-        dataUrl: buildUrl + "/49fdfb53563bebf86148b4fa173e7b6a.data.unityweb",
-        frameworkUrl: buildUrl + "/efa15fabeda4742b998dbc3cf57ba452.js.unityweb",
-        codeUrl: buildUrl + "/8cf17bd013eddf151b0f6acdf0218a3d.wasm.unityweb",
+        dataUrl: buildUrl + "/2eaa457dd9fce84258475d4b012314fe.data.unityweb",
+        frameworkUrl: buildUrl + "/02e0afd67a0d8704eb05e5ca4b6ce988.js.unityweb",
+        codeUrl: buildUrl + "/356df2eb15803b2d01a80b27f765cf22.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "GamesdMurdock",
         productName: "Asteroid Shield Tile-Matching Space Defense",
